added more obstacles

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     </style>
   </head>
   <body>
+    <script src="js/controllerpad.js"></script>
     <script src="js/main.js"></script>
   </body>
 </html>
